--- a/index.html
+++ b/index.html
@@ -25,16 +25,16 @@
       margin-right: auto;
       width: 40%;
     }
-    
+
 
 
   </style>
 </head>
 
 <body>
-  <h1>Happy birhtday to the best hubby in the world!</h1>
+  <h1>Happy birthday to the best hubby in the world!</h1>
   <p>Happy Birthday to my favorite adventurer. I never would have gone so many places without you. Now hurry up and let’s get planning for the next one!</p>
-
+  <p>I am sorry about today but I love you!</p>
   <img src="picture/us.jpg" width=25% align=center class="center">
   <hr>
 
